wp-content/themes/engic/css/elements747d.css
/* ... */
.wpcf7-form p {
	margin-top: 0;
	margin-bottom: 6px;
}

.wpcf7-form p:has(.wpcf7-submit),
.wpcf7-form p.wpcf7-submit-row,
.wpcf7-form p:has(input.wpcf7-submit) {
	clear: both;
	margin-top: 10px;
	text-align: right;
}

.wpcf7-form .wpcf7-textarea {
	height: 130px;
	resize: none;
}

.wpcf7-form .wpcf7-submit {
	background-color: #bba887;
	color: #ffffff;
	border: none;
}

.wpcf7-form .eut-one-third {
	width: 24%;
}

.wpcf7-form .eut-two-thirds {
	width: 75%;
}

.eut-one-third {
	width: 32.666666%;
	float: left;
	margin-right: 1%;
}

.eut-two-thirds {
	width: 66.333333%;
	float: left;
	margin-right: 1%;
}

.eut-one-half {
	width: 49%;
	float: left;
	margin-right: 2%;
}

.eut-one-third.eut-last-column,
.eut-two-thirds.eut-last-column,
.eut-one-half.eut-last-column {
	margin-right: 0;
}

fieldset {
	border: 1px solid rgba(0, 0, 0, 0.1);
	margin: 0 0 30px;
	padding: 15px;
}

legend {
	white-space: normal;
}

.eut-search {
	position: relative;
	display: block;
	max-width: 430px;
	margin: 0 auto;
}

.eut-search input[type='text'] {
	width: 100%;
	height: 45px;
	padding-left: 30px;
	padding-right: 35%;
}

.eut-search button[type='submit'] {
	width: 45px;
	height: 45px;
	position: absolute;
	background-color: rgba(0, 0, 0, 0);
	border: none;
	border-left: 1px solid;
	top: 0;
	right: 0;
	padding: 0;
	cursor: pointer;
}

/* Newsletter */
.eut-newsletter input[type='submit'] {
	padding: 0 2.273em;
	line-height: 40px;
	width: 100%;
}

/* =============================================================================
23. Advanced Promo
============================================================================= */
.eut-partner-advanced {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: -moz-none;
	-o-user-select: none;
	user-select: none;
	padding: 30px 0;
}

.eut-partner-advanced .eut-partner-content {
	margin-top: 30px;
}

.eut-partner-advanced .eut-partner-content {
	display: none;
}

.eut-partner-advanced .eut-partner-content p + .eut-btn {
	margin-top: 30px;
}

/* Text Animation */
.eut-partner-advanced .eut-partner-content p {
	-webkit-transform: translateY(80px);
	-moz-transform: translateY(80px);
	opacity: 0;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	transition: all 0.5s;
}

.eut-partner-advanced .eut-partner-content.eut-animated p {
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	opacity: 1;
}

/* Button Animation */
.eut-partner-advanced .eut-partner-content .eut-btn {
	-webkit-transform: translateY(100px);
	-moz-transform: translateY(100px);
	opacity: 0;
	-webkit-transition: -webkit-transform 0.3s 0.3s, opacity 0.3s 0.3s, color 0.35s, background-color 0.35s;
	-moz-transition: -moz-transform 0.3s 0.3s, opacity 0.3s 0.3s, color 0.35s, background-color 0.35s;
	transition: transform 0.3s 0.3s, opacity 0.3s 0.3s, color 0.35s, background-color 0.35s;
}

.eut-partner-advanced .eut-partner-content.eut-animated .eut-btn {
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	opacity: 1;
}

/* =============================================================================
24. Isotope
============================================================================= */
.eut-section[data-section-type="fullwidth-element"] .eut-element.eut-isotope {
	overflow: hidden;
}

.eut-isotope-container {
	opacity: 0;
	overflow: hidden;
}

.eut-isotope.eut-with-gap .eut-isotope-container {
	margin-right: -20px;
	margin-left: -20px;
}

.eut-section[data-section-type="fullwidth-element"] .eut-isotope.eut-with-gap  {
	padding-left: 40px;
	padding-right: 40px;
}

.eut-isotope.eut-with-gap .eut-isotope-item {
	margin-bottom: 40px;
}

.eut-isotope-item-inner.eut-fadeIn,
.eut-isotope-item-inner.eut-fadeInUp,
.eut-isotope-item-inner.eut-fadeInDown,
.eut-isotope-item-inner.eut-fadeInLeft,
.eut-isotope-item-inner.eut-fadeInRight {
	opacity: 0;
}

/* =============================================================================
25. Masonry
============================================================================= */
.eut-isotope-item.eut-packery-h2 img {
	width: auto;
	height: 100%;
	max-width: none;
}

/* Image Sizes */
.eut-image-square img {
	width: auto;
	height: 100%;
	max-width: none;
}

.eut-image-landscape img {
	width: 100%;
	height: auto;
	max-width: none;
	top: 50%;
	-webkit-transform: translate(0, -50%);
	-moz-transform:    translate(0, -50%);
	-ms-transform:     translate(0, -50%);
	-o-transform:      translate(0, -50%);
	transform:         translate(0, -50%);
}

.eut-image-portrait img {
	width: auto;
	height: 100%;
	max-width: none;
	left: 50%;
	-webkit-transform: translate(-50%, 0);
	-moz-transform:    translate(-50%, 0);
	-ms-transform:     translate(-50%, 0);
	-o-transform:      translate(-50%, 0);
	transform:         translate(-50%, 0);
}


/* =============================================================================
26. Blog Settings
============================================================================= */
/* Read More */
.eut-read-more,
#eut-main-content .more-link {
	font-size: 13px;
	text-transform: uppercase;
	font-weight: bold;
}

.eut-blog p + .eut-read-more {
	display: inline-block;
	vertical-align: bottom;
}

.eut-read-more {
	-webkit-transition : color .3s;
	-moz-transition    : color .3s;
	-ms-transition     : color .3s;
	-o-transition      : color .3s;
	transition         : color .3s;
}

/* Blog Media */
.eut-blog.eut-small-media .eut-media img,
.eut-blog.eut-blog-grid .eut-media img,
.eut-blog.eut-blog-masonry .eut-media img {
	width: 100%;
	height: auto;
	max-width: none;
}

/* Blog Categoriew with Read More */
.eut-blog .eut-categories {
	float: left;
}

.eut-read-more + .eut-categories,
.more-link + .eut-categories {
	float: right;
}

/* Post Author */
.eut-blog .eut-post-author {
	line-height: 1;
}

/* Link Format */
.eut-blog .eut-label-post.format-link a {
	display: block;
}

.eut-blog .eut-label-post.format-link .eut-link {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
/* ... */

